fix swagger model name
